--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "sass": "1.56.1",
     "sass-loader": "13.2.0",
     "terser-webpack-plugin": "5.3.6",
+    "ts-loader": "9.5.1",
+    "typescript": "5.5.3",
     "webpack": "5.75.0",
     "webpack-bundle-analyzer": "4.7.0",
     "webpack-cli": "4.10.0",
